# takiwizu

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Ma_sauvegarde.txt  README.md  annex_funcs.c  annex_funcs.h  game.c  game.h  game_aux.c  game_example.txt  game_ext.c  game_random.c  game_random.h  game_solve.c  game_struct.h  game_test_gifrim.c  game_test_ibensaad.c  game_test_rdubernard.c  game_text.c  game_tools.c  game_tools.h  main.c  makefile  model.c  model.h  queue.c
saves/: save.txt
sprites/: game_1.txt
src/: CMakeLists.txt
web/: g.css  game.css  game.html  game.js  game.wasm  game1.html  game1.js  gameScripts.js  wrapper.c
web/src/: annex_funcs.c  annex_funcs.h  game.c  game.h  game_aux.c  game_aux.h  game_ext.c  game_ext.h  game_random.c  game_random.h  game_struct.h  queue.c  queue.h
